--- a/Chapter08.ipynb
+++ b/Chapter08.ipynb
@@ -2,16 +2,357 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "fcceafc3-4b9b-413f-901f-a2e2b6649593",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>description</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>begin</th>\n",
+       "      <th>end</th>\n",
+       "      <th>altitudeMode</th>\n",
+       "      <th>tessellate</th>\n",
+       "      <th>extrude</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>drawOrder</th>\n",
+       "      <th>icon</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Iberia</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POLYGON Z ((-8.99346 37.08769 0.00000, -8.3873...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Portugal</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POLYGON Z ((-8.89116 41.85535 0.00000, -9.6306...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Road 1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>LINESTRING Z (-9.17050 38.63791 0.00000, -8.64...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Road 2</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>LINESTRING Z (-8.55244 40.68231 0.00000, -7.18...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Road 3</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>LINESTRING Z (-8.71652 37.12463 0.00000, -7.59...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Road 4</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>LINESTRING Z (-8.63854 41.15617 0.00000, -8.51...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Road 5</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>LINESTRING Z (2.18149 41.29864 0.00000, -0.865...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Bilbao</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (-3.01868 43.30943 0.00000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Barcelona</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (2.01306 41.50882 0.00000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Madrid</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (-3.72678 40.39636 0.00000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Sevilla</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (-6.01832 37.42718 0.00000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Malaga</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (-4.42530 36.75238 0.00000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Porto</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (-8.56714 41.19960 0.00000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Lissabon</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (-9.08350 38.72438 0.00000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Faro</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (-7.90616 37.11447 0.00000)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Santiago de Compostella</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>None</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>POINT Z (-8.54272 42.92122 0.00000)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       Name description timestamp begin end altitudeMode  \\\n",
+       "0                    Iberia        None       NaT   NaT NaT         None   \n",
+       "1                  Portugal        None       NaT   NaT NaT         None   \n",
+       "2                    Road 1        None       NaT   NaT NaT         None   \n",
+       "3                    Road 2        None       NaT   NaT NaT         None   \n",
+       "4                    Road 3        None       NaT   NaT NaT         None   \n",
+       "5                    Road 4        None       NaT   NaT NaT         None   \n",
+       "6                    Road 5        None       NaT   NaT NaT         None   \n",
+       "7                    Bilbao        None       NaT   NaT NaT         None   \n",
+       "8                 Barcelona        None       NaT   NaT NaT         None   \n",
+       "9                    Madrid        None       NaT   NaT NaT         None   \n",
+       "10                  Sevilla        None       NaT   NaT NaT         None   \n",
+       "11                   Malaga        None       NaT   NaT NaT         None   \n",
+       "12                    Porto        None       NaT   NaT NaT         None   \n",
+       "13                 Lissabon        None       NaT   NaT NaT         None   \n",
+       "14                     Faro        None       NaT   NaT NaT         None   \n",
+       "15  Santiago de Compostella        None       NaT   NaT NaT         None   \n",
+       "\n",
+       "    tessellate  extrude  visibility drawOrder  icon  \\\n",
+       "0           -1        0          -1      None  None   \n",
+       "1           -1        0          -1      None  None   \n",
+       "2            1        0          -1      None  None   \n",
+       "3            1        0          -1      None  None   \n",
+       "4            1        0          -1      None  None   \n",
+       "5            1        0          -1      None  None   \n",
+       "6            1        0          -1      None  None   \n",
+       "7           -1        0          -1      None  None   \n",
+       "8           -1        0          -1      None  None   \n",
+       "9           -1        0          -1      None  None   \n",
+       "10          -1        0          -1      None  None   \n",
+       "11          -1        0          -1      None  None   \n",
+       "12          -1        0          -1      None  None   \n",
+       "13          -1        0          -1      None  None   \n",
+       "14          -1        0          -1      None  None   \n",
+       "15          -1        0          -1      None  None   \n",
+       "\n",
+       "                                             geometry  \n",
+       "0   POLYGON Z ((-8.99346 37.08769 0.00000, -8.3873...  \n",
+       "1   POLYGON Z ((-8.89116 41.85535 0.00000, -9.6306...  \n",
+       "2   LINESTRING Z (-9.17050 38.63791 0.00000, -8.64...  \n",
+       "3   LINESTRING Z (-8.55244 40.68231 0.00000, -7.18...  \n",
+       "4   LINESTRING Z (-8.71652 37.12463 0.00000, -7.59...  \n",
+       "5   LINESTRING Z (-8.63854 41.15617 0.00000, -8.51...  \n",
+       "6   LINESTRING Z (2.18149 41.29864 0.00000, -0.865...  \n",
+       "7                 POINT Z (-3.01868 43.30943 0.00000)  \n",
+       "8                  POINT Z (2.01306 41.50882 0.00000)  \n",
+       "9                 POINT Z (-3.72678 40.39636 0.00000)  \n",
+       "10                POINT Z (-6.01832 37.42718 0.00000)  \n",
+       "11                POINT Z (-4.42530 36.75238 0.00000)  \n",
+       "12                POINT Z (-8.56714 41.19960 0.00000)  \n",
+       "13                POINT Z (-9.08350 38.72438 0.00000)  \n",
+       "14                POINT Z (-7.90616 37.11447 0.00000)  \n",
+       "15                POINT Z (-8.54272 42.92122 0.00000)  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import geopandas as gpd\n",
     "import fiona\n",
     "\n",
-    "gpd.io.file.fiona.drvsupport.supported_drivers['KML'] = 'rw'\n",
-    "all_data = gpd.read_file('chapter_08_data.kml')\n",
+    "fiona.drvsupport.supported_drivers['LIBKML'] = 'rw'\n",
+    "all_data = gpd.read_file('chapter_08_data/chapter_08_data.kml')\n",
     "all_data\n"
    ]
   },
@@ -199,9 +540,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "env_py310",
    "language": "python",
-   "name": "python3"
+   "name": "env_py310"
   },
   "language_info": {
    "codemirror_mode": {
@@ -213,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
